crates/uitest/fixtures/ty_check/effect_type_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/effect_type_mismatch.fe
---
error[8-0038]: effect `Storage` provided to `needs_storage` has type `Other`, but `Storage` is required
   ┌─ effect_type_mismatch.fe:17:9
   │
16 │     with (Storage = other) {
   │                     ----- effect `Storage` is provided here
17 │         needs_storage()
   │         ^^^^^^^^^^^^^^^ expected `Storage` for effect `Storage`, found `Other`
